Criação das models ,view e header.htmnl ,footer.html

--- a/home/templates/tutoriais.html
+++ b/home/templates/tutoriais.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <title>Tutoriais</title>
-</head>
+{% include 'header.html' %}
 <body>
 <p>Tutoriais de Aplicações Web</p>
+{% include 'footer.html' %}
 </body>
 </html>
