Ajustado, adminstração, models, views e templates

--- a/home/templates/footer.html
+++ b/home/templates/footer.html
@@ -1,11 +1,32 @@
+{% load static %}
 <div id="footer-social">
-<div class="container">
-<a href="https://facebook.com/vaicomeroque" target="_blank"><i class="fa fa-facebook"></i> <span>Facebook</span></a> <a href="https://instagram.com/vaicomeroque" target="_blank"><i class="fa fa-instagram"></i> <span>Instagram</span></a> <a href="https://pinterest.com/vaicomeroque" target="_blank"><i class="fa fa-pinterest"></i> <span>Pinterest</span></a> <a href="https://youtube.com/vaicomeroque" target="_blank"><i class="fa fa-youtube-play"></i> <span>Youtube</span></a>
-</div>
+	<div class="container">
+		<a href="#" target="_blank">
+			<i class="fa fa-facebook"></i>
+			<span>Facebook</span>
+		</a>
+		<a href="#" target="_blank">
+			<i class="fa fa-instagram"></i>
+			<span>Instagram</span>
+		</a>
+		<a href="#" target="_blank">
+			<i class="fa fa-pinterest"></i>
+			<span>Pinterest</span>
+		</a>
+		<a href="#" target="_blank">
+			<i class="fa fa-youtube-play"></i>
+			<span>Youtube</span>
+		</a>
+	</div>
 </div>
 <footer id="footer-copyright" style="background-color: rgba(50,48,48,0.5)">
-    <div class="container">
-        <p>© 2020 Super tutotiais Todos os direitos reservados </p>
-        <a href="#" class="to-top">Voltar para cima<i class="fa fa-angle-double-up"></i></a>
-    </div>
+	<div class="container">
+		<p>©2020 Super tutoriais Todos os direitos reservados </p>
+		<a href="#" class="to-top">Voltar para cima
+			<i class="fa fa-angle-double-up"></i>
+		</a>
+	</div>
 </footer>
+<script src="{% static 'js/jquery-3.4.1.slim.min.js'%}"></script>
+<script src="{% static 'js/popper.min.js'%}"></script>
+<script src="{% static 'js/bootstrap.min.js'%}"></script>
